--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "playwright-project",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "playwright test"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
-  "dependencies": {
-    "playwright": "^1.57.0"
+  "devDependencies": {
+    "@playwright/test": "^1.57.0"
   }
 }
